# OOP_Project

./: CMakeLists.txt  PdfParser.cpp  PdfParser.h  Store.h  Transaction.cpp  Transaction.h  main.cpp
Python_auto/: main.py
